--- a/config.yaml
+++ b/config.yaml
@@ -45,7 +45,7 @@ params:
 
     comments:
         enabled: true
-        provider: disqus
+        provider: utterances
         utterances:
             repo:Fuaer/Fuaer.github.io
             issueTerm: pathname
